--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title>Lancer Specialty Calculator</title>
 License Level: <select id="ll" class="ll">
 <option selected="selected">0</option>
 <option value="1">1</option>
