--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@ function updator(){
 		if (ep1[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("p1t").innerHTML = cent(pboost+i);
+			document.getElementById("p1t").innerHTML = cent(pboost+i*2);
 		}	
 	}
 	
@@ -701,7 +701,7 @@ function updator(){
 		if (ep2[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("p2t").innerHTML = cent(pboost+i);
+			document.getElementById("p2t").innerHTML = cent(pboost+i*2);
 		}	
 	}
 	
@@ -709,7 +709,7 @@ function updator(){
 		if (ep3[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("p3t").innerHTML = cent(pboost+i);
+			document.getElementById("p3t").innerHTML = cent(pboost+i*2);
 		}	
 	}
 	
@@ -717,7 +717,7 @@ function updator(){
 		if (ep4[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("p4t").innerHTML = cent(pboost+i);
+			document.getElementById("p4t").innerHTML = cent(pboost+i*2);
 		}	
 	}
 	
@@ -725,7 +725,7 @@ function updator(){
 		if (ep5[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("p5t").innerHTML = cent(pboost+i);
+			document.getElementById("p5t").innerHTML = cent(pboost+i*2);
 		}	
 	}
 	
@@ -733,7 +733,7 @@ function updator(){
 		if (ep6[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("p6t").innerHTML = cent(pboost+i);
+			document.getElementById("p6t").innerHTML = cent(pboost+i*2);
 		}	
 	}
 	
@@ -741,7 +741,7 @@ function updator(){
 		if (ef1[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("f1t").innerHTML = cent(fboost+i);
+			document.getElementById("f1t").innerHTML = cent(fboost+i*2);
 		}	
 	}
 	
@@ -749,7 +749,7 @@ function updator(){
 		if (ef2[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("f2t").innerHTML = cent(fboost+i);
+			document.getElementById("f2t").innerHTML = cent(fboost+i*2);
 		}	
 	}
 	
@@ -757,7 +757,7 @@ function updator(){
 		if (ef3[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("f3t").innerHTML = cent(fboost+i);
+			document.getElementById("f3t").innerHTML = cent(fboost+i*2);
 		}	
 	}
 	
@@ -765,7 +765,7 @@ function updator(){
 		if (ef4[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("f4t").innerHTML = cent(fboost+i);
+			document.getElementById("f4t").innerHTML = cent(fboost+i*2);
 		}	
 	}
 	
@@ -773,7 +773,7 @@ function updator(){
 		if (ef5[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("f5t").innerHTML = cent(fboost+i);
+			document.getElementById("f5t").innerHTML = cent(fboost+i*2);
 		}	
 	}
 	
@@ -781,7 +781,7 @@ function updator(){
 		if (ek1[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("k1t").innerHTML = cent(kboost+i);
+			document.getElementById("k1t").innerHTML = cent(kboost+i*2);
 		}	
 	}
 	
@@ -789,7 +789,7 @@ function updator(){
 		if (ek2[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("k2t").innerHTML = cent(kboost+i);
+			document.getElementById("k2t").innerHTML = cent(kboost+i*2);
 		}	
 	}
 	
@@ -797,7 +797,7 @@ function updator(){
 		if (ek3[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("k3t").innerHTML = cent(kboost+i);
+			document.getElementById("k3t").innerHTML = cent(kboost+i*2);
 		}	
 	}
 	
@@ -805,7 +805,7 @@ function updator(){
 		if (ek4[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("k4t").innerHTML = cent(kboost+i);
+			document.getElementById("k4t").innerHTML = cent(kboost+i*2);
 		}	
 	}
 	
@@ -813,7 +813,7 @@ function updator(){
 		if (ek5[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("k5t").innerHTML = cent(kboost+i);
+			document.getElementById("k5t").innerHTML = cent(kboost+i*2);
 		}	
 	}
 	
@@ -821,7 +821,7 @@ function updator(){
 		if (ek6[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("k6t").innerHTML = cent(kboost+i);
+			document.getElementById("k6t").innerHTML = cent(kboost+i*2);
 		}	
 	}
 	
@@ -829,7 +829,7 @@ function updator(){
 		if (er1[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("r1t").innerHTML = cent(rboost+i);
+			document.getElementById("r1t").innerHTML = cent(rboost+i*2);
 		}	
 	}
 	
@@ -837,7 +837,7 @@ function updator(){
 		if (er2[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("r2t").innerHTML = cent(rboost+i);
+			document.getElementById("r2t").innerHTML = cent(rboost+i*2);
 		}	
 	}
 	
@@ -845,7 +845,7 @@ function updator(){
 		if (er3[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("r3t").innerHTML = cent(rboost+i);
+			document.getElementById("r3t").innerHTML = cent(rboost+i*2);
 		}	
 	}
 	
@@ -853,7 +853,7 @@ function updator(){
 		if (er4[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("r4t").innerHTML = cent(rboost+i);
+			document.getElementById("r4t").innerHTML = cent(rboost+i*2);
 		}	
 	}
 	
@@ -861,7 +861,7 @@ function updator(){
 		if (er5[i].checked){
 			currpoints = currpoints - i;
 			if (maxskill<i) maxskill = i;
-			document.getElementById("r5t").innerHTML = cent(rboost+i);
+			document.getElementById("r5t").innerHTML = cent(rboost+i*2);
 		}	
 	}
 
