--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -491,7 +491,7 @@
                               </td>
                               <td valign="top" class="cheat_sheet_output_cell_2"    style="
                                  ">
-                                 <div style="padding: 3px 8px;">Reduces all damage of a type or source by half.</div>
+                                 <div style="padding: 3px 8px;">Reduces all damage of a type or source by half, rounded up.</div>
                               </td>
                            </tr>
                            <tr class="countrow">
@@ -1433,7 +1433,7 @@
                               </td>
                               <td valign="top" class="cheat_sheet_output_cell_2"    style="
                                  ">
-                                 <div style="padding: 3px 8px;">You are Slowed. All attacks against you gain 1 (+)</div>
+                                 <div style="padding: 3px 8px;">You are Slowed. All attacks against you gain 1 (+). A Prone character can stand up to clear the condition using all of their Standard Movement, unless Immobilised. Doing this doesn't provoke Reactions.</div>
                               </td>
                            </tr>
                            <tr class="altrow countrow">
