--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -594,6 +594,12 @@
                      <h3 class="cheat_sheet_output_title" id="title_23074_89711">Stress Damage</h3>
                      <div class="cheat_sheet_output_block" id="block_23074_89711">
                         <table border="0" cellspacing="0" cellpadding="0" id="cheat_sheet_output_table" class="cheat_sheet_output_threecol">
+						<tr class="altrow countrow">
+                              <td valign="top" colspan="3" class="cheat_sheet_output_cell_1"    style="
+                                 white-space: nowrap                                 ">
+                                 <div style="padding: 3px 8px;">Roll a number of d6's equal to the amount of Stress damage you've taken.</div>
+                              </td>
+                           </tr>
                            <tr class="altrow countrow">
                               <td valign="top" class="cheat_sheet_output_cell_1"    style="
                                  white-space: nowrap                                 ">
@@ -672,6 +678,12 @@
                      <div class="cheat_sheet_output_block" id="block_23074_89710">
                         <table border="0" cellspacing="0" cellpadding="0" id="cheat_sheet_output_table" class="cheat_sheet_output_threecol">
                            <tr class="altrow countrow">
+                              <td valign="top" colspan="3" class="cheat_sheet_output_cell_1"    style="
+                                 white-space: nowrap                                 ">
+                                 <div style="padding: 3px 8px;">Roll a number of d6's equal to the amount of Structure damage you've taken.</div>
+                              </td>
+                           </tr>
+						   <tr class="altrow countrow">
                               <td valign="top" class="cheat_sheet_output_cell_1"    style="
                                  white-space: nowrap                                 ">
                                  <div style="padding: 3px 8px;"><strong>Roll</strong></div>
@@ -696,7 +708,7 @@
                               </td>
                               <td valign="top" class="cheat_sheet_output_cell_3"    style="
                                  ">
-                                 <div style="padding: 3px 8px;">your mech is impaired until the end of your next turn.</div>
+                                 <div style="padding: 3px 8px;">Your mech is impaired until the end of your next turn.</div>
                               </td>
                            </tr>
                            <tr class="altrow countrow">
@@ -739,6 +751,18 @@
                               <td valign="top" class="cheat_sheet_output_cell_3"    style="
                                  ">
                                  <div style="padding: 3px 8px;">Your mech is damaged beyond repair and is destroyed . You can still exit it as normal.</div>
+                              </td>
+                           </tr>
+                        </table>
+                     </div>
+                  </section>
+				  <section class="cheat_sheet_output_wrapper cheat_sheet_output_column_threecol" style="z-index: 30; page-break-inside: avoid; " id="block_89711">
+                     <h3 class="cheat_sheet_output_title" id="title_23074_89711">Reactor Meltdown</h3>
+                     <div class="cheat_sheet_output_block" id="block_23074_89711">
+                        <table border="0" cellspacing="0" cellpadding="0" id="cheat_sheet_output_table" class="cheat_sheet_output_threecol">
+						<tr class="altrow countrow">
+                              <td valign="top" class="cheat_sheet_output_cell_1"    >
+                                 <div style="padding: 3px 8px;">Any pilot inside is immediately killed and the mech vaporised in a catastrophic eruption with a BURST 2 area, so make sure you Eject. The wreck is annihilated and all characters within the affected area must succeed on an AGILITY save or take 4d6 Explosive damage. On a success, they take half damage.</div>
                               </td>
                            </tr>
                         </table>
